# zmodem

./: CMakeLists.txt  README.md  crctab.c  crctab.h  gettext.h  log.c  lrz.c  lsz.c  mrz.c  msz.c  rbsb.c  tcp.c  timing.c  timing.h  uart.c  uart.h  zglobal.h  zm.c  zm.h  zmodem.h  zmodem.pro  zreadline.c  zreadline.h
